added description in index

--- a/HW1 "VCS"/index.html
+++ b/HW1 "VCS"/index.html
@@ -11,7 +11,7 @@
   <li>git add - додає файл в "зону очікування" комміту</li>
   <li>git commit - робим комміт/зберігаємо зміну</li>
   <li>git log - історія коммітів на поточній гілці</li>
-  <li>git checkout - переключається на вибрану гілку і робить цю гілку робочою діректорією</li>
+  <li>git checkout - переключається на вибрану гілку і робить цю гілку робочою діректорією, пересувається по коммітах</li>
   <li>git branch - створює нову гілку</li>
   <li>git push - загружає зміни з локального репозиторію у віддалений</li>
   <li>git pull - загружає історію/зміни з віддаленого репозиторію і об'єднує з локальним</li>
