added link to hw2

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <h1>Homework</h1>
 <p>
 <a href='./HW1 "VCS"'>Homework1 'VCS'</a>
+<a href='./HW2 "Frontend.html"/'>Homework2 'HTML'</a>
 
 </p>
 </body>
