--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <p>
 <a href='./HW1 "VCS"'>Homework1 'VCS'</a>
 <a href='./HW2 "Frontend.html"/'>Homework2 'HTML'</a>
+<a href='./HW3 "Технологія CSS"/'>Homework3 'CSS'</a>
 
 </p>
 </body>
