--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <a href='./HW1 "VCS"'>Homework1 'VCS'</a>
 <a href='./HW2 "Frontend.html"/'>Homework2 'HTML'</a>
 <a href='./HW3 "Технологія CSS"/'>Homework3 'CSS'</a>
+<a href='./HW4 "Робота з макетами"/'>Homework4 'Work with layouts'</a>
 
 </p>
 </body>
