added link on HW5

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <a href='./HW2 "Frontend.html"/'>Homework2 'HTML'</a>
 <a href='./HW3 "Технологія CSS"/'>Homework3 'CSS'</a>
 <a href='./HW4 "Робота з макетами"/'>Homework4 'Work with layouts'</a>
-
+<a href='./HW5 "Блочна верстка"/'>Homework5 'Блочна верстка'</a>
 </p>
 </body>
 </html>
