added link on HW6

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <a href='./HW3 "Технологія CSS"/'>Homework3 'CSS'</a>
 <a href='./HW4 "Робота з макетами"/'>Homework4 'Work with layouts'</a>
 <a href='./HW5 "Блочна верстка"/'>Homework5 'Блочна верстка'</a>
+<a href='./HW6 "Flex, Grid"/'>Homework6</a>
 </p>
 </body>
 </html>
