--- a/HW6 "Flex, Grid"/index.html
+++ b/HW6 "Flex, Grid"/index.html
@@ -11,8 +11,9 @@
 <body>
   <div class="content">
     <header>
+     
       <div class="topbar">
-        <img class="logo-img" src="./images/Logo.svg" alt="logo-icon">
+       <img class="logo-img" src="./images/Logo.svg" alt="logo-icon">
         <nav>
           <ul class="header-menu">
             <li class="header-menu-link about-link"><a href="#">About</a></li>
@@ -27,11 +28,12 @@
       </div>
 
       <div class="header-content">
+         
         <h1>Save your data storage here.</h1>
         <p class="header-txt">Data Warehouse is a data storage area that has been
             tested for security, so you can store your data here
             safely but not be afraid of being stolen by others.</p>
-        <button>Learn more</button>
+        <button class="header-more">Learn more</button>
       </div>
     </header>
 
