added two more blocks but still need to be fixed

--- a/HW6 "Flex, Grid"/index.html
+++ b/HW6 "Flex, Grid"/index.html
@@ -16,9 +16,9 @@
        <img class="logo-img" src="./images/Logo.svg" alt="logo-icon">
         <nav>
           <ul class="header-menu">
-            <li class="header-menu-link about-link"><a href="#">About</a></li>
+            <li class="header-menu-link about-link"><a href="#who-we-are">About</a></li>
             <li class="header-menu-link"><a href="#">Help</a></li>
-            <li class="header-menu-link"><a href="#">Features</a></li>
+            <li class="header-menu-link"><a href="#features">Features</a></li>
             <li class="header-menu-link"><a href="#">Signup</a></li>
           </ul>
         </nav>
@@ -28,17 +28,110 @@
       </div>
 
       <div class="header-content">
-         
+        <div class="header-content-txt">
         <h1>Save your data storage here.</h1>
         <p class="header-txt">Data Warehouse is a data storage area that has been
             tested for security, so you can store your data here
             safely but not be afraid of being stolen by others.</p>
         <button class="header-more">Learn more</button>
+        </div>
+        <div class="header-content-img">
+          <img class="header-img" src="./images/header-pic.png" alt="header-image">
+        </div>
       </div>
     </header>
 
     <main>
+      <div class="about-info" id="who-we-are">
+        <img class="about-pic" src="./images/main-pic.png" alt="picture from block-who we are">
+        <div class="about-txt">
+          <h2>
+              We are a high-level data storage bank
+          </h2>
+          <p>
+            The place to store various data that you can access at any
+             time through the internet  and where you can carry it. 
+             This very flexible storage area has a high level of security.
+             To enter into your own data you must enter the password
+             that you created when you registered in this Data Warehouse. 
+         </p>
+        </div>
+      </div>
 
+      <div class="features-info" id="features">
+        <div class="features-title">
+          <h2>Features</h2>
+          <p>Some of the features and advantages that we provide for those of you
+             who store data in this Data Warehouse.</p>
+        </div>
+
+        <div class="features-block">
+          <div class="search-data">
+            <img class="search-pic" src="./images/search.png" alt="search-pic">
+            <div>
+            <h3>Search data</h3>
+            <p class="features-txt">Don’t worry if your data is very 
+               large, the Data Warehoue
+               provides a search engine,
+               which is useful for making it
+               easier to find data effectively
+               saving time.</p>
+            <button class="features-learn-more"><span>Learn more</span>
+                <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
+            </button>
+            </div>
+          </div>
+
+          <div class="access-24h">
+            <img class="access-pic" src="./images/24hours.png" alt="24hours access pic">
+            <div>
+            <h3>24 Hours Access</h3>
+              <p class="features-txt">Access is given 24 hours a full
+                 morning to night and meet
+                 again in the morning, giving 
+                 you comfort when you need
+                 data when urgent.</p>
+              <button class="features-learn-more"><span>Learn more</span>
+                  <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
+              </button>
+            </div>
+          </div>
+
+          <div class="print-out">
+            <img class="printer-pic" src="./images/print.png" alt="printer pic">
+            <div>
+              <h3>Print Out</h3>
+              <p class="features-txt">Print out service gives you
+                 convenience if someday you 
+                 need print data, just edit it
+                 all and just print it.</p>
+              <button class="features-learn-more"><span>Learn more</span>
+                  <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
+              </button>
+            </div>
+          </div>
+
+          <div class="security-code">
+            <img class="security-pic" src="./images/security.png" alt="key-lock pic">
+            <div>
+              <h3>Security Code</h3>
+              <p class="features-txt">Data Security is one of our
+                 best facilities. Allows for your 
+                 files to be safer. The file can
+                 be secured with a code or 
+                 password that you created,
+                 so only you can open the file.</p>
+              <button class="features-learn-more"><span>Learn more</span>
+                  <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div>
+
+      </div>
     </main>
 
     <footer>
