--- a/HW6 "Flex, Grid"/index.html
+++ b/HW6 "Flex, Grid"/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Homework6</title>
   <link rel="stylesheet" href="../reset.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style-font-avenir.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
   <div class="content">
     <header>
-     
+
       <div class="topbar">
-       <img class="logo-img" src="./images/Logo.svg" alt="logo-icon">
+        <img class="logo-img" src="./images/Logo.svg" alt="logo-icon">
         <nav>
           <ul class="header-menu">
             <li class="header-menu-link about-link"><a href="#who-we-are">About</a></li>
@@ -23,17 +26,17 @@
           </ul>
         </nav>
         <button class="header-request"><span>Request Demo</span>
-           <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
+          <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
         </button>
       </div>
 
       <div class="header-content">
         <div class="header-content-txt">
-        <h1>Save your data storage here.</h1>
-        <p class="header-txt">Data Warehouse is a data storage area that has been
+          <h1>Save your data storage here.</h1>
+          <p class="header-txt">Data Warehouse is a data storage area that has been
             tested for security, so you can store your data here
             safely but not be afraid of being stolen by others.</p>
-        <button class="header-more">Learn more</button>
+          <button class="header-more">Learn more</button>
         </div>
         <div class="header-content-img">
           <img class="header-img" src="./images/header-pic.png" alt="header-image">
@@ -46,15 +49,15 @@
         <img class="about-pic" src="./images/main-pic.png" alt="picture from block-who we are">
         <div class="about-txt">
           <h2>
-              We are a high-level data storage bank
+            We are a high-level data storage bank
           </h2>
           <p>
             The place to store various data that you can access at any
-             time through the internet  and where you can carry it. 
-             This very flexible storage area has a high level of security.
-             To enter into your own data you must enter the password
-             that you created when you registered in this Data Warehouse. 
-         </p>
+            time through the internet and where you can carry it.
+            This very flexible storage area has a high level of security.
+            To enter into your own data you must enter the password
+            that you created when you registered in this Data Warehouse.
+          </p>
         </div>
       </div>
 
@@ -62,81 +65,179 @@
         <div class="features-title">
           <h2>Features</h2>
           <p>Some of the features and advantages that we provide for those of you
-             who store data in this Data Warehouse.</p>
+            who store data in this Data Warehouse.</p>
         </div>
 
         <div class="features-block">
           <div class="search-data">
-            <img class="search-pic" src="./images/search.png" alt="search-pic">
             <div>
-            <h3>Search data</h3>
-            <p class="features-txt">Don’t worry if your data is very 
-               large, the Data Warehoue
-               provides a search engine,
-               which is useful for making it
-               easier to find data effectively
-               saving time.</p>
-            <button class="features-learn-more"><span>Learn more</span>
+              <img class="search-pic" src="./images/search.png" alt="search-pic">
+            </div>
+            <div class="features-mini-block">
+              <h3>Search data</h3>
+              <p class="features-txt">Don’t worry if your data is very
+                large, the Data Warehoue
+                provides a search engine,
+                which is useful for making it
+                easier to find data effectively
+                saving time.</p>
+              <button class="features-learn-more"><span>Learn more</span>
                 <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
-            </button>
+              </button>
             </div>
           </div>
 
           <div class="access-24h">
-            <img class="access-pic" src="./images/24hours.png" alt="24hours access pic">
             <div>
-            <h3>24 Hours Access</h3>
+              <img class="access-pic" src="./images/24hours.png" alt="24hours access pic">
+            </div>
+            <div class="features-mini-block">
+              <h3>24 Hours Access</h3>
               <p class="features-txt">Access is given 24 hours a full
-                 morning to night and meet
-                 again in the morning, giving 
-                 you comfort when you need
-                 data when urgent.</p>
+                morning to night and meet
+                again in the morning, giving
+                you comfort when you need
+                data when urgent.</p>
               <button class="features-learn-more"><span>Learn more</span>
-                  <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
+                <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
               </button>
             </div>
           </div>
 
           <div class="print-out">
-            <img class="printer-pic" src="./images/print.png" alt="printer pic">
             <div>
+              <img class="printer-pic" src="./images/print.png" alt="printer pic">
+            </div>
+            <div class="features-mini-block">
               <h3>Print Out</h3>
               <p class="features-txt">Print out service gives you
-                 convenience if someday you 
-                 need print data, just edit it
-                 all and just print it.</p>
+                convenience if someday you
+                need print data, just edit it
+                all and just print it.</p>
               <button class="features-learn-more"><span>Learn more</span>
-                  <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
+                <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
               </button>
             </div>
           </div>
 
           <div class="security-code">
-            <img class="security-pic" src="./images/security.png" alt="key-lock pic">
             <div>
+              <img class="security-pic" src="./images/security.png" alt="key-lock pic">
+            </div>
+            <div class="features-mini-block">
               <h3>Security Code</h3>
               <p class="features-txt">Data Security is one of our
-                 best facilities. Allows for your 
-                 files to be safer. The file can
-                 be secured with a code or 
-                 password that you created,
-                 so only you can open the file.</p>
+                best facilities. Allows for your
+                files to be safer. The file can
+                be secured with a code or
+                password that you created,
+                so only you can open the file.</p>
               <button class="features-learn-more"><span>Learn more</span>
-                  <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
+                <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
               </button>
             </div>
           </div>
         </div>
       </div>
 
-      <div>
+      <div class="testimonials">
+        <h2>Testimonials</h2>
+        <div class="comment">
+          <div class="avatar">
+            <img src="./images/profile-pic.png" alt="avatar">
+          </div>
+          <div class="comment-txt">
+            <h4>John Fang</h4>
+            <span class="user-site">wordfaang.com</span>
+            <p>
+              Suspendisse ultrices at diam lectus nullam.
+              Nisl, sagittis viverra enim erat tortor ultricies massa turpis.
+              Arcu pulvinar aenean nam laoreet nulla.
+            </p>
+          </div>
+        </div>
+        <div class="slider">
+          <img class="slider-dots" src="./images/button:slider/slide.png" alt="four dots slider">
+          <div class="arrows-slider">
+            <img class="slider-arrow-back" src="images/button:slider/slider-back-arrow.png" alt="back-arrow">
+            <img class="slider-arrow-forward" src="./images/button:slider/slider-forward-arrow.png" alt="forward-arrow">
+          </div>
+        </div>
 
       </div>
     </main>
+  </div>
+  <footer>
+    <div class="footer-content">
+      <div class="footer-top-bar">
+        <div class="topbar-txt">
+          <h2>Try for free!</h2>
+          <p>Get limited 1 week free try out features!</p>
+        </div>
+        <div class="footer-buttons">
+          <button class="footer-learn-more">Learn more</button>
+          <button class="footer-request"><span>Request Demo</span>
+            <img src="./images/button:slider/button-arrow.svg" alt="purple-forward-arrow">
+          </button>
+        </div>
+      </div>
+      <div class="footer-nav">
+        <div class="contact-info">
+          <div class="footer-logo">
+            <img src="./images/Logo.svg" alt="logo">
+            <span>DataWarehouse</span>
+          </div>
+          <div class="address">
+            <span class="warehouse-address">Warehouse Society, 234</span>
+            <span class="warehouse-address">Bahagia Ave Street PRBW 29281</span>
+            <div class="e-mail">
+              <span>info@warehouse.project</span>
+              <span>1-232-3434 (Main)</span>
+            </div>
+          </div>
+          <div class="copyright">
+            <span>© Datawarehouse™, 2020. All rights reserved.</span>
+            <span>Company Registration Number: 21479524.</span>
+          </div>
+        </div>
 
-    <footer>
+        <div class="footer-about">
+          <a href="#who-we-are">About</a>
+          <ul>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">DW News</a></li>
+          </ul>
+        </div>
 
-    </footer>
-</div>
+        <div class="help-block">
+          <a href="#">Help</a>
+          <ul>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Sign up</a></li>
+            <li><a href="#">Guide</a></li>
+            <li><a href="#">Reports</a></li>
+            <li><a href="#">Q&A</a></li>
+          </ul>
+        </div>
+
+        <div class="social-media-block">
+          <h4>Social Media</h4>
+          <div class="social-media-buttons">
+            <img src="./images/social-media/f.png" alt="facebook-item">
+            <img src="./images/social-media/t.png" alt="twitter-icon">
+            <img src="./images/social-media/i.png" alt="instagram-icon">
+          </div>
+          <div class="chat">
+            <img src="./images/social-media/chat-img.png" alt="chat-icon">
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </footer>
+
 </body>
+
 </html>
