added link on HW7

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <a href='./HW4 "Робота з макетами"/'>Homework4 'Work with layouts'</a>
 <a href='./HW5 "Блочна верстка"/'>Homework5 'Блочна верстка'</a>
 <a href='./HW6 "Flex, Grid"/'>Homework6</a>
+<a href='./HW7'>Homework7</a>
 </p>
 </body>
 </html>
