added link on HW8

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <a href='./HW5 "Блочна верстка"/'>Homework5 'Блочна верстка'</a>
 <a href='./HW6 "Flex, Grid"/'>Homework6</a>
 <a href='./HW7'>Homework7</a>
+<a href='./HW8 "Псевдокласы:псевдоелементи"/'>Homework8</a>
 </p>
 </body>
 </html>
