--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <a href='./HW6 "Flex, Grid"/'>Homework6</a>
 <a href='./HW7'>Homework7</a>
 <a href='./HW8 "Псевдокласы:псевдоелементи"/'>Homework8</a>
+<a href='./HW10 "Bootstrap"/'>Homework10</a>
 </p>
 </body>
 </html>
