fixed "search" and "name"

--- a/HW10 "Bootstrap"/index.html
+++ b/HW10 "Bootstrap"/index.html
@@ -20,7 +20,7 @@
         <img src="./images/inst-logo.svg" width="105" height="30" alt="instagram-logo" loading="lazy">
       </a>
 
-      <form class="form-inline  d-none d-sm-none d-md-block search-form">
+      <form class="form-inline  search-form">
 
         <input class="form-control search" type="search" placeholder="Search" aria-label="Search">
       </form>
