--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <a href='./HW7'>Homework7</a>
 <a href='./HW8 "Псевдокласы:псевдоелементи"/'>Homework8</a>
 <a href='./HW10 "Bootstrap"/'>Homework10</a>
+<a href='./HW11 "Animation"/'>Homework11</a>
 </p>
 </body>
 </html>
