added link on hw12

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <a href='./HW8 "Псевдокласы:псевдоелементи"/'>Homework8</a>
 <a href='./HW10 "Bootstrap"/'>Homework10</a>
 <a href='./HW11 "Animation"/'>Homework11</a>
+<a href='./HW12/'>Homework12</a>
 </p>
 </body>
 </html>
