added link on hw14

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <a href='./HW10 "Bootstrap"/'>Homework10</a>
 <a href='./HW11 "Animation"/'>Homework11</a>
 <a href='./HW12/'>Homework12</a>
+<a href='./HW13/'>Homework13</a>
+<a href='./HW14 "Оптимізація"'>Homework14</a>
 </p>
 </body>
 </html>
